# HFUT-MiCamp

./: .gitignore  README.md
Day01/: CMakeLists.txt  README.md  hello  hello.cpp  hello.h
Day02/: README.md
Day02/Calculator(Optional)/: Calculator  Calculator.cpp  README.md
Day02/Q1：FindMax/: README.md  findMax  findMax.cpp
Day02/Q2：Quadratic/: README.md  quadratic  quadratic.cpp
Day02/Q3：JumpStairs/: Jump_stairs  Jump_stairs.cpp  README.md
Day02/Q4：Reverse/: Makefile  README.md  reverse  reverse.cpp
Day02/Q5：Class Learn/: README.md  class_learn  class_learn.cpp
Day02/Q6：Point And Rectangle/: Makefile  Point.cpp  Point.h  README.md  Rectangle.cpp  Rectangle.h  main.cpp  rectangle
Day03/: README.md
Day03/Q1：Function Pointer/: README.md  function_pointer  function_pointer.cpp
Day03/Q2：Array Pointer/: README.md  array_pointer  array_pointer.cpp
Day03/Q3：Understand Syntax/: README.md
Day03/Q4：Dynamic Allocation/: README.md  dynamic_allocation  dynamic_allocation.cpp
Day03/Q5：File Operations/: README.md  file_operations  file_operations.c  myName.txt
Day03/Q6：Dynamic Max/: README.md  dynamic_max  dynamic_max.cpp
Day03/Q7：Students Class/: README.md  Student.cpp  Student.h  main.cpp  students.txt  students_program
Day04/: README.md
Day04/Q1：Swap/: README.md  swap  swap.cpp
Day04/Q2：Calculator/: README.md  calculator  calculator.cpp
Day04/Q3：Comparison/: README.md  comparison  comparison.cpp
Day04/Q4：Scores/: README.md  scores  scores.cpp
Day04/Q5：Big K/: README.md  big_k  big_k.cpp
Day04/Q6：Dictionary/: Dictionary.cpp  Dictionary.h  README.md  dictionary  main.cpp
Day04/课堂练习/Add/: Add  add.cpp
Day04/课堂练习/Count/: count  count.cpp
Day04/课堂练习/Map/: map  map.cpp
Day04/课堂练习/Max/: max  max.cpp
Day04/课堂练习/Vector/: vector  vector.cpp
Day05/: README.md
Day05/Q1：Multithread/: README.md  multi_thread  multi_thread.cpp
Day05/Q2：Sum Array/: README.md  sum_array  sum_array.cpp
Day05/Q3：TaskScheduler/: README.md  task_scheduler  task_scheduler.cpp
Day05/Q4：RingBuffer/: README.md  ring_buffer  ring_buffer.cpp
Day05/Q5：Sound/: README.md  sound  sound.cpp
Day05/Q6：Philosophers/: README.md  philosophers  philosophers.cpp
Day06/: README.md
Day06/Q1：TCP WireShark/: README.md
Day06/Q2：UDP WireShark/: README.md
Day06/Q3：字节序/: README.md  endian  endian.cpp
Day06/Q4：解析套接字地址结构/: README.md  test  test.cpp
Day06/Q5：TCP/: CMakeLists.txt  README.md  build.sh
Day06/Q5：TCP/include/: socket.h
Day06/Q5：TCP/src/: client.cpp  client_window.cpp  client_window.h  server.cpp  server_window.cpp  server_window.h  socket.cpp
Day06/Q6：UDP/: CMakeLists.txt  README.md
Day06/Q6：UDP/include/: common.h
Day06/Q6：UDP/src/client/: CMakeLists.txt  client.cpp
Day06/Q6：UDP/src/server/: CMakeLists.txt  server.cpp
Day07/: README.md
Day07/Assignment/: README.md
Day07/Assignment/app/: build.gradle
Day07/Assignment/gradle/wrapper/: gradle-wrapper.properties
Day07/Exercise/: README.md  settings.gradle
Day07/Exercise/app/: build.gradle
Day07/Exercise/gradle/wrapper/: gradle-wrapper.properties
Day08/: README.md
Day08/AiAssist/: README.md
Day08/AiAssist/app/: build.gradle
Day08/AiAssist/app/src/main/cpp/: CMakeLists.txt  assist.cpp  chat_jni.cpp
Day08/AiAssist/release/release/: output-metadata.json
Day08/练习 1：HTTP 下载 MP4 文件/: CMakeLists.txt  README.md  main.cpp
Day08/练习 1：HTTP 下载 MP4 文件/include/: download.h  get.h
Day08/练习 1：HTTP 下载 MP4 文件/src/: download.cpp  get.cpp
Day08/练习 2：JNI HTTP 交叉编译/: CMakeLists.txt  README.md
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/: settings.gradle
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/: build.gradle
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/src/main/: AndroidManifest.xml
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/src/main/cpp/: CMakeLists.txt  http_jni.cpp
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/src/main/cpp/libghttp/: get.h
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/src/main/java/com/mi/cc/http/: HttpClient.java  MainActivity.java
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/src/main/res/drawable/: edit_bg.xml
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/src/main/res/layout/: activity_main.xml  main_activity.xml
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/src/main/res/values/: strings.xml  themes.xml
Day08/练习 2：JNI HTTP 交叉编译/CCHttp/app/src/main/res/values-night/: themes.xml
Day08/练习 2：JNI HTTP 交叉编译/app/src/main/java/com/example/http/: HttpWrapper.java
Day08/练习 2：JNI HTTP 交叉编译/libghttp/: com_mi_cc_http_MainActivity.h  get.cpp  get.h
Day08/练习 2：JNI HTTP 交叉编译/src/: http_wrapper.cpp
Day09/: README.md
Day09/课后作业：编译一个 Android 下 ARMv8 的 FFmpeg 库/: README.md
Day09/课堂作业 1：MP4 to FLV & MKV/: README.md  test_1280x720.flv  test_1280x720.mkv
Day09/课堂作业 2：安装 ffmpeg/: README.md
Day09/课堂作业 3：提取视频逐帧数据/: README.md  frames.csv
Day09/课堂作业 4：解析视频到 AVPacket/: README.md  main.cpp  ts_analyzer
Day09/课堂作业 5：解码视频到 AVFrame/: README.md  decoder  main.cpp
Day09/课堂作业 6：TS to YUV/: 1.ts  README.md  decoder  test.cpp
Day09/附加加分题：Android 视频解码器/: README.md  settings.gradle
Day09/附加加分题：Android 视频解码器/app/: .gitignore  build.gradle
Day10/: README.md
Day10/作业 1：使用 RenderDoc 抓取提供程序的帧，并尝试分析/: README.md  analyze.rdc
Day10/作业 2：交通信号灯/: LightFSM  LightFSM.cpp  README.md
Day10/作业 3：红色三角形/: README.md  main.cpp  triangle
Day10/作业 4：彩色三角形/: README.md  main.cpp  triangle
Day10/作业 5：OpenGL绘制图片/: README.md  main  main.cpp
Day11/: README.md
Day11/ANativeWindow使用探索/: README.md
Day11/ANativeWindow使用探索/app/: build.gradle
Day11/Libdrm 探索/: 1.cpp  README.md  test
VideoTransCode/: .gitignore  CMakeLists.txt  README.md  resume.md  run.sh
VideoTransCode/include/: audio_decoder.h  audio_filter.h  audioencoder.h  demuxer.h  muxer.h  my_queue.h  queue.h  ring_buffer.h  thread_manager.h  transcode.h  video_decoder.h  video_filter.h  videoencoder.h
VideoTransCode/src/: audio_decoder.cpp  audio_filter.cpp  audio_transcode.cpp  audioencoder.cpp  demuxer.cpp  main.cpp  muxer.cpp  muxer_execute.cpp  thread_manager.cpp  transcode.cpp  video_decoder.cpp  video_filter.cpp  video_transcode.cpp  videoencoder.cpp
resource/: demuxer_log.txt
(+41 files in other folders)
